# rust-nextjs-aws-file-hosting-service

./: Dockerfile.dev  README.md  docker-compose.dev.yml  workspace.code-workspace
apps/api/: .env.example  Cargo.toml
apps/api/migrations/: 20220222233639_create_users_table.sql
apps/api/src/: main.rs  tokens.rs  utils.rs
apps/api/src/controllers/: auth.rs  create_account.rs  mod.rs  sign_in.rs  token.rs
apps/api/src/models/: user.rs
apps/web/: .env.example  .gitignore  package.json  tsconfig.json
apps/web/app/: types.ts  validations.ts
apps/web/app/actions/auth/: createAccount.ts  getNewAccessToken.ts  signIn.ts
apps/web/app/components/: Link.tsx  MenuItem.tsx  PasswordInputWithRequirements.tsx
apps/web/app/components/layout/: AppLayout.tsx  Layout.tsx
apps/web/app/components/navigation/: NavigationBar.tsx
apps/web/app/hooks/: useData.tsx
apps/web/app/services/auth/: createAccount.ts  signIn.ts
apps/web/pages/: _app.tsx  _document.tsx  create-account.tsx  files.tsx  home.tsx  index.tsx  sign-in.tsx
