[package]
name = "api"
version = "0.1.0"
edition = "2021"
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.6"
tokio = { version = "1.17.0", features = ["full"] }
tower-http = { version = "0.2.3", features = ["cors"] }
dotenv_codegen = "0.15.0"
sqlx = { version = "0.5.10", features = [ "runtime-tokio-native-tls" , "postgres" ] }
serde = { version = "1.0", features = ["derive"] }
