[package]
name = "api"
version = "0.1.0"
edition = "2021"
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
dotenv = "0.15.0"
sqlx = { version = "0.5.10", features = [ "runtime-tokio-rustls", "postgres", "uuid", "chrono" ] }
axum =   { version = "0.4.7", features = ["headers"] }
tower-http = { version = "0.2.3", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-argon2 = "1.0"
rand = "0.8.5"
anyhow = "1.0.55"
uuid = { version = "0.8", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8"